removed hashcode,equals and toString